syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "baby.mumu.iam.client.api.grpc";
option java_outer_classname = "RoleServiceProto";

service RoleService {
  rpc findAll (RoleFindAllGrpcCmd) returns (PageOfRoleFindAllGrpcDTO);
  rpc findById (google.protobuf.Int64Value) returns (RoleFindByIdGrpcDTO);
}

message RoleFindAllGrpcCmd {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue code = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue description = 4;
  google.protobuf.Int32Value  current = 5;
  google.protobuf.Int32Value  page_size = 6;
}

message RoleFindByIdGrpcDTO {
  int64 id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  bool hasDescendant = 5;
}

message RoleGrpcDTO {
  int64 id = 1;
  string code = 2;
  string name = 3;
  repeated RolePermissionGrpcDTO permissions = 4;
  string description = 5;
  bool hasDescendant = 6;
}

message RolePermissionGrpcDTO {
  int64 id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  bool hasDescendant = 5;
}

message PageOfRoleFindAllGrpcDTO {
  repeated RoleGrpcDTO content = 1;
  int32 total_pages = 2;
}
